--- a/community.html
+++ b/community.html
@@ -116,7 +116,7 @@
             </div>
         </div>
         <div style="text-align: left; padding:20px 0;" class="header-team">
-            VISION & VALUES <span>//</span>
+            COMMUNITY <span>//</span>
         </div>
         
        
