--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <title>Document</title>
 </head>
-<body class="bg-dark">
+<body class="bg-dark-bg">
     <nav>
         
         <div class="nav-container">
