--- a/manifesto.html
+++ b/manifesto.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comme&family=Inconsolata&family=Poppins&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
-    <title>Document</title>
+    <title>Awakened Shamans | Manifesto</title>
 </head>
 
 <body class="bg-dark-bg">
@@ -83,8 +83,7 @@
                             </div>
                         </div>
                         <div class="download-center">
-                            <a href="#" id="downloadCv" class="download-cv  disabled"><span
-                                    class="download-text">Shop</span></a>
+                            <a href="launchapp.html" id="downloadCv" class="download-cv  disabled"><span class="download-text">Shop</span></a>
                         </div>
                         <div class="download-center">
                             <a href="#" id="downloadCv" class="download-cv disabled"><span
@@ -107,46 +106,94 @@
         <div class="header-manifesto">
             THE MANIFESTO <span>//</span>
         </div>
-        <div class="tokens-cards-main">
-            <div class="tokens-text manifesto-text">
+        <div >
+            <div class=" manifesto-text">
                 <div class="manifesto-text-container">
-                    At the edge of dawn, we stand,<br>
-                    Two paths before us, fraught, and grand:<br>
-                    One of Feudalism, chains and strife,<br>
-                    The other, Anarchy, a chaotic life.<br>
-                </div>
-                <div class="manifesto-text-container">
-                    At the edge of dawn, we stand,<br>
-                    Two paths before us, fraught, and grand:<br>
-                    One of Feudalism, chains and strife,<br>
-                    The other, Anarchy, a chaotic life.<br>
-                </div>
-                <div class="manifesto-text-container">
-                    At the edge of dawn, we stand,<br>
-                    Two paths before us, fraught, and grand:<br>
-                    One of Feudalism, chains and strife,<br>
-                    The other, Anarchy, a chaotic life.<br>
-                </div>
-                <div class="manifesto-text-container">
-                    At the edge of dawn, we stand,<br>
-                    Two paths before us, fraught, and grand:<br>
-                    One of Feudalism, chains and strife,<br>
-                    The other, Anarchy, a chaotic life.<br>
-                </div>
-                <div class="manifesto-text-container">
-                    At the edge of dawn, we stand,<br>
-                    Two paths before us, fraught, and grand:<br>
-                    One of Feudalism, chains and strife,<br>
-                    The other, Anarchy, a chaotic life.<br>
-                </div>
-                <div class="manifesto-text-container">
-                    At the edge of dawn, we stand,<br>
-                    Two paths before us, fraught, and grand:<br>
-                    One of Feudalism, chains and strife,<br>
-                    The other, Anarchy, a chaotic life.<br>
+                    Here we stand before the dawn,<br><br>
+                    Humanity has given 2 options for the future technological transformations;<br>
+                    <ul style="margin-left: 50px; list-style: number;">
+                        <li>Technological Feudalism 2.0/ Total Control of Mind and Body/ Ultimate Order</li>
+                        <li>Civil Wars/ Primitive Anarchy/ Ultimate Chaos</li><br>
+                        This inevitable future is at the door steps of humanity as most of you comfortably sleep, busy
+                        with your surrogate activities.<br><br>
+                        Third option is yet to be developed… Using the power of decentralization and collective unity,
+                        we can forge a new balance out of chaos, an antidote to tyranny<br><br>
+                        <li>
+                            <span style="text-decoration: underline;">"Network States"</span> - highly aligned online collectives bound by shared values with a
+                            capacity for collective action that crowdfunds territories around the world, and eventually
+                            gains diplomatic recognition from pre-existing states
+                        </li>
+                    </ul><br>
+                    <div style="text-align: center;font-weight: 800;">
+                        <span >A future where individuals have freedom to choose which Network State they want
+                        to live in</span>
+                    </div><br>
+                    <div style="text-align: center;font-weight: 800;">
+                        <span >
+                            “The empire long divided must unite; long united must divide this is how it has
+                            always been.”
+                        </span>
+                    </div><br>
+                    <div>
+                        We call upon you to join the revolution and together we build the world’s FIRST Psychedelic
+                        Network State - <span style="text-decoration: underline;">“Awakened Shamans DMT Tribe”</span> - where our tribes can unite under shared
+                        values, offering sanctuary from the mental and physical pain inflicted by technological
+                        advancements.
+                    </div><br>
+                    <div>
+                        Modern human is all alone, socially isolated, unfulfilled, miserable, suffering in their
+                        comfortable sleep, trying to climb the ladder of slavery to prove their worth. All because they
+                        don't have freedom over their lives.
+                    </div><br>
+                    <div>
+                        <span style="font-weight: 800;">Current Chaos at Individual Level:</span><br>
+                        Conditioned minds, addicted to various escapes, controlled by social media algorithms and ai,
+                        destroyed attention spans, dumbed down with hormonal foods, pumped up with either fear or
+                        greed by the media, caged in an amplified echo chambers, indoctrinated by edudation,
+                        conformed to the social engineering, constantly occupied or entertained, otherwise get bored
+                        dopamine addicted narcissist young generation, institutionalized impatience, unfulfilled lives,
+                        widespread psychological sufferings…<span style="text-decoration: underline;">Total mass psychosis…</span>
+                    </div><br>
+                    <div>
+                        <span style="font-weight: 800;">Current Control at State Level;</span><br>
+                        The gap between rich and poor, endless money printing for corporates (not even for you),
+                        monopolization of power, money, technology, data, surveillance, science, pharmaceutical
+                        industry, energy, logistics, real estate, food and farming industries and polarization of society in
+                        every aspect, silenced, deplatformed opposite views, artificially engineered diseases and cures.
+                    </div><br>
+                    <div style="text-align: center;font-weight: 800;">
+                        <span>
+                            They will own everything, but you will be “happy”
+                            Innovations have to solve human problems, not for controlling them even more.
+                        </span>
+                    </div><br>
+                    <div style="text-align: center;">
+                        <span>
+                            Alone we suffer, but together we stand,<br>
+                            To fight the power, reclaim our land,<br>
+                            For true freedom is found within,<br>
+                            The power to change, the strength to win.<br>
+                        </span>
+                    </div><br>
+                    <div style="text-align: center;">
+                        <span>
+                            Opposite courage lies not in cowardice,<br>
+                            But conformity that feeds the abyss,<br>
+                            Choose to be free, or comfortably numb,<br>
+                            Only through change can freedom come.<br>
+                        </span>
+                    </div><br>
+                    <div style="text-align: center;">
+                        <span>
+                            Here, we propose a revolution bold,<br>
+                            A future bright, a story untold,<br>
+                            With Network States, we'll forge anew,<br>
+                            A world of freedom, for me and you.<br>
+                        </span>
+                    </div><br>
                 </div>
             </div>
-            <div class="manifesto-img"></div>
+           
         </div>
     </div>
 
