--- a/nft-token.html
+++ b/nft-token.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Comme&family=Inconsolata&family=Poppins&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
-    <title>Document</title>
+    <title>Awakened Shamans | NFT/Token</title>
 </head>
 <body class="bg-draw">
     <nav>
@@ -80,8 +80,7 @@
                             </div>
                         </div>
                         <div class="download-center">
-                            <a href="#" id="downloadCv" class="download-cv  disabled"><span
-                                    class="download-text">Shop</span></a>
+                            <a href="launchapp.html" id="downloadCv" class="download-cv  disabled"><span class="download-text">Shop</span></a>
                         </div>
                         <div class="download-center">
                             <a href="#" id="downloadCv" class="download-cv disabled"><span
