--- a/mindmap.html
+++ b/mindmap.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comme&family=Inconsolata&family=Poppins&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
-    <title>Document</title>
+    <title>Awakened Shamans | Mind Map</title>
 </head>
 
 <body class="bg-draw">
@@ -84,8 +84,7 @@
                             </div>
                         </div>
                         <div class="download-center">
-                            <a href="#" id="downloadCv" class="download-cv  disabled"><span
-                                    class="download-text">Shop</span></a>
+                            <a href="launchapp.html" id="downloadCv" class="download-cv  disabled"><span class="download-text">Shop</span></a>
                         </div>
                         <div class="download-center">
                             <a href="#" id="downloadCv" class="download-cv disabled"><span
